solved the dark mode issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
     --color-border : #ccc;
     --color-white : #fff;
     --border-radius : 30px;
+    color-scheme: only light;
 }
 
 *, *::before, *::after {
